2009-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-write-region): Flush file properties
	in case of short track.

2009-07-07  Michael McNamara  <mac@mail.brushroad.com>

	* verilog-mode.el (verilog-error-regexp-emacs-alist): Coded custom
	representation of verilog error regular expressions to work with
	Emacs-22's new format.
	(verilog-error-regexp-xemacs-alist): Coded custom representation
	of verilog error regular expressions to work with XEmacs format
	(verilog-error-regexp-add-xemacs): Hook routine to install verilog
	error recognition into XEmacs.
	(verilog-error-regexp-add-emacs): Hook routine to install verilog
	error recognition into Emacs-22.

2009-07-06  Chong Yidong  <cyd@stupidchicken.com>

	* woman.el: Remove stand-alone closing parentheses.
	(woman-file-name, woman2-format-paragraphs)
	(woman-leave-blank-lines): Code cleanup.
	(woman-use-own-frame): Change default to nil.
	(woman-italic, woman-bold, woman-unknown, woman-addition): Change
	defaults to inherit from default faces.
	(woman2-process-escapes): Consume the newline after a stand-alone
	filler character (Bug#3651).

2009-07-06  Glenn Morris  <rgm@gnu.org>

	* ffap.el (ffap-version): Make it an obsolete alias for emacs-version.
	(top-level): Move provide to the end.
	(ffap): Remove defunct URL from custom group.

	* subr.el (eval-after-load): Doc fix.

2009-07-06  Vincent Belaïche <vincent.belaiche@gmail.com>

	* calc/calc-embed.el (calc-embedded-make-info): Don't force when
	`calc-embedded-word' is called twice.

2009-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (find-alternate-file-other-window, find-alternate-file):
	Obey confirm-nonexistent-file-or-buffer.

2009-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* dired-aux.el (dired-show-file-type): Handle remote files.

2009-03-22  Jari Aalto  <jari.aalto@cante.net>

	* desktop.el (desktop-globals-to-save):
	Add file-name-history (Bug#2750).
